# Extending-Quantum-Key-Distribution---TU-e-participants

./: .gitignore  README.md  introduction.md  pyproject.toml
docs/: index.md
docs/Advanced/: debugging.md  netsquid_integration.md  performance.md
docs/advanced/: custom_protocols.md  index.md  noise_models.md
docs/api/: configuration.md  context_and_stack.md  index.md  nqasm_package.md  program_interface.md  run_package.md  running_simulations.md  sim_package.md  util_package.md
docs/architecture/: netqasm_integration.md  overview.md  simulation_flow.md  stack_components.md
docs/foundations/: classical_communication.md  epr_sockets.md  index.md  netqasm.md
docs/tutorials/: 0_overview.md  1_basics.md  2_netqasm.md  3_simulation_control.md  4_network_configuration.md  5_multi_node.md  6_parameter_sweeping.md  appendix_terminology.md  index.md
hackathon_challenge/: README.md  SETUP.md  STATUS.md
hackathon_challenge/auth/: __init__.py  socket.py  wegman_carter.py
hackathon_challenge/configs/: __init__.py  base.yaml
hackathon_challenge/core/: __init__.py  constants.py  protocol.py
hackathon_challenge/privacy/: __init__.py  amplifier.py  entropy.py  estimation.py  utils.py
hackathon_challenge/reconciliation/: simple_cascade.py
hackathon_challenge/scripts/: analyze_results.py  live_demo.py  run_scenarios.py  run_simulation.py
hackathon_challenge/utils/: logging.py  results.py
hackathon_challenge/verification/: __init__.py  polynomial_hash.py  utils.py  verifier.py
templates/2_nodes/: application.py  config.yaml  run_simulation.py
(+42 files in other folders)
